bugs-fixed--MentorCardAlignment

--- a/src/components/pages/mentors.css
+++ b/src/components/pages/mentors.css
@@ -75,7 +75,8 @@
 }
 .mentor-cards
 {
-    display:inline-block;
+    display:flex;
+    margin: auto;
 }
 
 .github-icon
